--- a/lib/libft/Makefile
+++ b/lib/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: jrichard <marvin@42.fr>                    +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2016/11/13 16:20:38 by jrichard          #+#    #+#              #
-#    Updated: 2017/04/11 22:42:13 by jrichard         ###   ########.fr        #
+#    Updated: 2017/04/13 18:03:20 by jrichard         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -23,7 +23,7 @@ SRC = ft_atoi.c ft_lstadd_end.c	ft_memchr.c	ft_putnbr.c	ft_strctrim.c ft_strmapi
 	  ft_putchar_fd.c ft_strclr.c ft_strlcat.c ft_strrchr.c ft_itoa.c ft_memalloc.c ft_putendl.c ft_strcmp.c \
 	  ft_strlen.c ft_strsplit.c ft_lstadd.c ft_memccpy.c ft_putendl_fd.c ft_strcpy.c ft_strmap.c ft_strstr.c \
 	  get_next_line.c get_next_line2.c ft_lstcheck.c ft_isblank.c ft_kvlexer.c ft_kvlexer2.c ft_atof.c \
-	  ft_error.c ft_itoa_base.c ft_ltoa.c ft_ltoa_base.c
+	  ft_error.c ft_itoa_base.c ft_ltoa.c ft_uitoa.c ft_ultoa.c ft_ltoa_base.c
 
 OBJ = $(SRC:.c=.o)
 
